# popshop-finder-mcp

./: .env.example  .env.render.example  .gitignore  Caddyfile  Dockerfile  README.md  analytics.py  billing.py  calendar_integrations.py  config.py  db_runtime.py  deploy.sh  docker-compose.yml  doppler.yaml.example  google_calendar_sync.py  material_search_engine.py  package-lock.json  package.json  planner_engine.py  playwright.config.js  production_ai.py  pyproject.toml  render.yaml  requirements.txt  server.py  server_ai.py  shopify_oauth.py  storage_ai.py  storage_calendar.py  storage_community.py  storage_events.py  storage_feed.py  storage_feedback.py  storage_inventory.py  storage_marketplace.py  storage_markets.py  storage_materials.py  storage_messages.py  storage_production.py  storage_shopify.py  (+2 more)
.claude/: settings.local.json
ai/: __init__.py  router.py
docs/: CLAUDE_LAUNCH_CHECKLIST.md  MVP_POPUP_SHOP_FINDER_MASTER_PLAN.md  QA_CHECKLIST.md  RENDER_DOPPLER_SUPABASE_SETUP.md  VENDOR_ATLAS_MCP.md  example_mcp_tools.json  vendor_atlas_mvp_schema.sql
features/: __init__.py  flags.py
lib/: posthog.js
middleware/: __init__.py  serper_connector.py  session_manager.py  signal_capture.py  sync.py
playwright-tests/: api.smoke.spec.js  app.smoke.spec.js  smoke-helpers.js
prompts/: competitive_response_system.md  install_assistant_system.md  public_messaging_system.md  sales_qualification_system.md
scripts/: seed_dev.py  test_discover_events_mcp.py
site/: DESIGN.md  about.html  admin-users.html  admin-verify.html  admin.html  ai-insights.html  business.html  calendar-settings.html  calendar.html  coming-soon.html  community-room.html  community.html  dashboard.html  discover.html  event.html  features.html  feed.html  final-plan.html  find-market.html  history.html  index.html  integrations.html  inventory.html  listings.html  market-analytics.html  market-applications.html  market-dashboard.html  market-map.html  materials.html  messages.html  my-shop.html  planner.html  pricing.html  product-costs.html  profile.html  profit-analytics.html  profit.html  settings.html  shopper-dashboard.html  shopper-plan.html  (+6 more)
sprints/: ACTIVE_SPRINT.toml  (+2 more)
(+42 files in other folders)
